fliter feature in admin added ✅

--- a/src/components/adminHome/admin.css
+++ b/src/components/adminHome/admin.css
@@ -58,15 +58,42 @@
   height: 20px;
   border-radius: 100px;
 }
-.transparent {
+.new {
   border: 1px solid #1a5f7a;
 }
-.yellow {
+.under-verification {
   background-color: yellow;
 }
-.green {
+.verified {
   background-color: green;
 }
-.red {
-  background-color: orange;
+.rejected {
+  background-color: rgb(255, 72, 0);
+}
+
+/* ========================================  EACH LIST  ================================= */
+
+.eachList {
+  display: flex;
+  margin: 30px;
+  padding: 15px 30px;
+  background-color: #1a5f7a71;
+  border: 1px solid #1a5f7a;
+  border-radius: 10px;
+  justify-content: space-between;
+  align-items: baseline;
+  cursor: pointer;
+}
+.eachList .docName {
+  color: #57c5b6;
+  font-size: 20px;
+  font-weight: 500;
+}
+.eachList .timeDate {
+  color: #23799a;
+  margin-right: 20px;
+  font-size: 15px;
+}
+.eachList .right {
+  display: flex;
 }
