changed upload form but there is small bug to fix

--- a/src/components/uploadForm/uploadForm.css
+++ b/src/components/uploadForm/uploadForm.css
@@ -107,12 +107,22 @@
   color: white;
 }
 
-.uploadForm .btns button {
+.upload-form button a {
+  padding: 7px 25px;
+  background-color: #1a5f7a;
+  color: #159895;
+  border-radius: 5px;
+  /* margin-top: 20px; */
+  cursor: pointer;
+  margin: 30px 120px;
+}
+.uploadForm .btns p {
   padding: 7px 70px;
   background-color: #1a5f7a;
   color: #159895;
   border-radius: 5px;
   /* margin-top: 20px; */
+  cursor: pointer;
 }
 .uploadForm .btns {
   display: flex;
